# Kafka-Rust-Filter

./: README.md  docker-compose.yml
Consumer/: Cargo.toml
Consumer-Filter-Publisher/: Cargo.toml
Consumer-Filter-Publisher/src/: main.rs
Consumer/src/: main.rs
