[package]
name = "kafka-consumer"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka-sys = "3.0.0"
tracing-subscriber = "0.3.19"
openssl = { version = "0.10.45", features = ["vendored"] }
rdkafka = { version = "0.25", features = ["cmake-build"] }
tokio = { version = "1.25.0", features = ["full"] }
sonic-rs = "0.5.1"
serde = "1.0.219"
faststr = "0.2.31"
reqwest = { version = "0.11.14", features = ["json"] }
urlencoding = "2.1.2"
serde_json = "1.0.92"
kafka = "0.10.0"






